--- a/app/sass/fontello.scss
+++ b/app/sass/fontello.scss
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../fonts/fontello/fontello.eot?26142671');
-  src: url('../fonts/fontello/fontello.eot?26142671#iefix') format('embedded-opentype'),
-       url('../fonts/fontello/fontello.woff2?26142671') format('woff2'),
-       url('../fonts/fontello/fontello.woff?26142671') format('woff'),
-       url('../fonts/fontello/fontello.ttf?26142671') format('truetype'),
-       url('../fonts/fontello/fontello.svg?26142671#fontello') format('svg');
+  src: url('../fonts/fontello/fontello.eot?49083708');
+  src: url('../fonts/fontello/fontello.eot?49083708#iefix') format('embedded-opentype'),
+       url('../fonts/fontello/fontello.woff2?49083708') format('woff2'),
+       url('../fonts/fontello/fontello.woff?49083708') format('woff'),
+       url('../fonts/fontello/fontello.ttf?49083708') format('truetype'),
+       url('../fonts/fontello/fontello.svg?49083708#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?26142671#fontello') format('svg');
+    src: url('../font/fontello.svg?49083708#fontello') format('svg');
   }
 }
 */
@@ -58,6 +58,13 @@
 .icon-search:before { content: '\e800'; } /* '' */
 .icon-cancel:before { content: '\e801'; } /* '' */
 .icon-cancel-1:before { content: '\e802'; } /* '' */
+.icon-vk:before { content: '\e803'; } /* '' */
+.icon-facebook:before { content: '\e804'; } /* '' */
+.icon-gplus:before { content: '\e805'; } /* '' */
+.icon-twitter:before { content: '\e806'; } /* '' */
+.icon-location:before { content: '\e807'; } /* '' */
+.icon-clock:before { content: '\e808'; } /* '' */
 .icon-angle-right:before { content: '\f105'; } /* '' */
 .icon-angle-up:before { content: '\f106'; } /* '' */
 .icon-angle-down:before { content: '\f107'; } /* '' */
+.icon-odnoklassniki:before { content: '\f263'; } /* '' */
