--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -25,26 +25,12 @@ button
 	padding: 0 
 	border: none
 
-.btn-more /*кнопка подробнее*/
-	width: 200px
-	height: 50px
-	border: 2px solid $btn
-	background: transparent
-	a
-		display: block
-		height: 100%
-		color: $btn
-		text-decoration: none
-		line-height: 50px
-		font-size: 17px
-  transition: all 0.2s
-
-.title /*заголовки секуций*/
-		font-family: 'Helvetica', 'Roboto', sans-serif
-	 font-size: 44px
-	 font-weight: 700
-	 span
-	 	color: $text-title
+.title /*заголовки секций*/
+	font-family: 'Helvetica', 'Roboto', sans-serif
+	font-size: 44px
+	font-weight: 700
+	span
+	 color: $text-title
 
 .services-block /*блок для секции наши услуги*/
 	display: block
@@ -84,17 +70,17 @@ button
 .tv-block /*блок с видео*/
 	display: block
 	position: relative
-	width: 250px
-	height: 130px
+	width: 270px
+	height: 150px
 	&:hover
 		box-shadow: 0 0 0 5px $active-text
 	&__img
-		height: 130px
+		height: 150px
 	&__icon
 		width: 60px
 		position: absolute
-		top: 38px
-		left: 92px
+		top: 50px
+		left: 95px
 
 /*section sale*/
 
@@ -138,7 +124,7 @@ button
  font-size: 20px
  pointer-events: none
 
-.clinic /*кнопка все клинки*/
+.btn-clinic /*кнопка все клинки*/
 	width: 120px
 	height: 30px
  background: $btn-clinic
@@ -147,6 +133,31 @@ button
  	display: block
  	text-decoration: none
   color: $bg-sub
+
+.btn-info /*кнопки записаться на прием и задать вопрос*/
+	position: relative
+	display: inline-block
+	width: 120px
+	height: 65px
+	background: $text-title
+	border: none
+	text-align: left
+	opacity: 0.9
+	&:hover
+  background: $btn-info
+	img
+  position: absolute
+  top: 10px
+  right: 10px
+		height: 40px
+		opacity: 0.2
+		z-index: -1
+	a
+		display: block
+		padding: 10px 0 10px 20px
+		text-decoration: none
+		color: $menu-text
+
 
 /*header*/
 
@@ -159,54 +170,36 @@ button
 		position: absolute
 		top: 43px
 		left: 112px
+
 .location
 	font-size: 13px
+	padding-left: 25px
+	position: relative
  address
  	margin: 0
-		img
-			width: 20px
+		i
+			position: absolute
+			top: -4px
+			left: -7px
 			color: $active-text
-			vertical-align: top
-		p
-			padding-left: 5px
-			display: inline-block
-			line-height: 1.2
+			font-size: 22px
 	.time
 		padding-top: 5px
-
-		img
-			width: 17px
-			vertical-align: top
+  i
+			position: absolute
+			top: 37px
+			left: -7px
+			color: $active-text
+			font-size: 20px
 		p
-			padding-left: 5px
-			display: inline-block
 		span
 			color: $active-text
    font-weight: 700
-.info
-	button
-		margin-left: 16px
-		position: relative
-		display: inline-block
-		width: 120px
-		height: 65px
-		background: $btn-info
-		border: none
-		text-align: left
-		opacity: 0.8
-		&:hover
-   opacity: 1
-		img
-   position: absolute
-   top: 10px
-   right: 10px
-			height: 40px
-			opacity: 0.2
-		a
-			display: block
-			padding: 10px 0 10px 20px
-			text-decoration: none
-			color: $menu-text
+
+.info /*кнопки записаться на прием и задать вопрос*/
+.signing
+	margin-right: 30px
+
 .phone
 	text-align: right
 	p
@@ -229,7 +222,7 @@ button
 	background: $bg-menu
  position: relative
 
-.menu-bar
+.menu-header
  height: 60px
  align-items: center
  &>li
@@ -502,20 +495,27 @@ button
 	padding-top: 65px
 	&-img
 	 margin-bottom: 50px
-		background: url(../img/banner.jpg) no-repeat 0% 25%
-		//background-size: cover
+		background: #f5f2e9
+		background-size: cover
 	 height: 200px
+	 position: relative
+	 overflow: hidden
+	 img
+	 	width: 800px
+	 	position: absolute
+	 	top: -100px
+	 	right: -180px
+
  &-content
  	padding-top: 27px
- 	//font-size: 22px
+ 	font-size: 16px
  	max-width: 545px
 	 &__text
-	 	padding-left: 35px
+	 	padding: 10px 0 10px 35px
 	 	background: $active-text
 	 	color: $menu-text
-	 	//width: 40%
 	 &__tel
-	 	padding-left: 35px
+	 	padding: 5px 0 5px 35px
 	 	.start
     font-size: 20px
 	 	.end
@@ -523,10 +523,15 @@ button
 	 		font-size: 20px
 	 small
    padding-left: 35px
+   font-size: 14px
 	
+.tv-title
+	font-size: 28px
+	margin-bottom: 30px
 .tv /*видео*/
+	margin-bottom: 80px
 .love /*1й блок*/
-	margin-right: 20px
+	margin-right: 30px
 	&__img
 		background: url(../img/love.jpg) no-repeat 
 		background-size: cover
@@ -535,21 +540,108 @@ button
 		background: url(../img/zamershaja.jpg) no-repeat 
 		background-size: cover
 
+.base-title
+ font-size: 28px
+ margin-left: 30px 
 .base /*базы в exel*/
-.oocit
-	display: block
+	margin-left: 30px 
+.base-excel
+	//display: block
 	position: relative
-	width: 250px
+	width: 235px
 	height: 200px
-	box-shadow: 1px 1px 1px 1px #000
-	&__item
-	&__icon
+	box-shadow: -10px 10px 20px 0px #f0f0f0
+	margin-right: 5px
+	&:before
+		content: ""
+		position: absolute
+		width: 150px
+		height: 1px
+		color: $active-text
+		bottom: 36px
+		left: 36px
+	&:hover
+		box-shadow: -5px 5px 1px 1px #ebf7ff
+		text-decoration: none
+		color: $active-text
+	img
 		width: 80px
 		position: absolute
-		top: 60px
+		top: 53px
 		left: 80px
-	&__text
+	p
   position: absolute
-		bottom: 25px
-		left: 45px
- 
+		bottom: 38px
+		left: 35px
+  
+.footer
+ background: $bg-menu 	
+ &-main
+ 	box-shadow: 0px 5px 15px -1px rgba(0, 0, 0, 0.3)
+.logo-footer
+	margin: 35px 0 20px
+.menu-footer
+	margin-bottom: 50px
+	li
+		a
+			color: $active-text
+			text-decoration: underline
+			font-size: 12px
+	&__one
+		margin-right: 45px
+
+.services-footer
+	margin-top: 35px
+	line-height: 2.1
+	li
+		a
+			color: $menu-text
+			text-decoration: underline
+			font-size: 13px
+
+.location-footer
+	margin-top: 40px
+	p
+		color: $menu-text
+.show-map
+	margin-top: 15px
+ a
+  color: $active-text
+		text-decoration: underline
+.btn-clinic-footer
+	margin-top: 25px
+	width: 142px
+	height: 40px
+	border: 2px solid $menu-text
+	background: $bg-menu
+ a
+ 	display: block
+ 	text-decoration: none
+ 	color: $menu-text
+ 	height: 100%
+ 	line-height: 40px
+
+.contacts
+	margin-top: 30px
+.phone_rout
+	text-align: left
+.phone__number_color
+	color: $menu-text
+.info-footer /*блок с кнопками*/
+	margin-top: 20px
+.signing_f /*кнопка записаться на прием*/
+	margin-right: 11px
+.social
+	margin-top: 15px
+	font-size: 20px
+ li
+ 	margin-right: 10px
+
+.footer-copy
+	margin: 40px 30px
+	color: #375670
+ small
+ p
+  padding-top: 10px
+  text-align: center
+
